デザインを改善: グラデーション背景とアニメーションを追加

--- a/index.html
+++ b/index.html
@@ -1,22 +1,136 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Tutorial</title>
+    <title>GitHub Tutorial - 初めてのGitHub Pages</title>
     <style>
-        body {
-            font-family: sans-serif;
-            text-align: center;
-            margin-top: 50px;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .container {
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 20px;
+            padding: 50px;
+            max-width: 600px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            animation: fadeIn 1s ease-in;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         h1 {
-            color: #333;
+            color: #667eea;
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            animation: slideIn 0.8s ease-out;
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateX(-50px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        p {
+            color: #555;
+            font-size: 1.2em;
+            line-height: 1.8;
+            margin-bottom: 15px;
+        }
+
+        .badge {
+            display: inline-block;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 25px;
+            margin: 10px 5px;
+            font-size: 0.9em;
+            font-weight: bold;
+            transition: transform 0.3s ease;
+        }
+
+        .badge:hover {
+            transform: scale(1.1);
+        }
+
+        .footer {
+            margin-top: 30px;
+            padding-top: 20px;
+            border-top: 2px solid #eee;
+            color: #888;
+            font-size: 0.9em;
+        }
+
+        .emoji {
+            font-size: 1.5em;
+            animation: bounce 2s infinite;
+        }
+
+        @keyframes bounce {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-10px);
+            }
         }
     </style>
 </head>
+
 <body>
-    <h1>Hello, GitHub!</h1>
-    <p>これはGitHub公開のテストページです。</p>
+    <div class="container">
+        <h1>🚀 Hello, GitHub!</h1>
+        <p>これはGitHub Pagesで公開されたテストページです。</p>
+        <p>GitHubを使って、コードを管理し、世界中に公開できます！</p>
+
+        <div style="margin: 30px 0;">
+            <span class="badge">Git</span>
+            <span class="badge">GitHub</span>
+            <span class="badge">GitHub Pages</span>
+        </div>
+
+        <p><span class="emoji">✨</span> このページは自動的にデプロイされています <span class="emoji">✨</span></p>
+
+        <div class="footer">
+            <p>最終更新: 2025年11月30日</p>
+            <p>Powered by GitHub Pages</p>
+        </div>
+    </div>
 </body>
+
 </html>
